--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Second Page -->
         <div id="aboutPage" class="page">
             <div class="cover-photo">
-                <img src="./a.jpg" alt="Cover Photo">
+                <img src="./I.jpg" alt="Cover Photo">
             </div>
             <div class="about">
                 <h1> Sabbir Ahmmed</h1>
