--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                   
                 </pre>
                 </pre>
-                <p>Persuing BBA Program from Department of Management in University of Chittagong</a></p>
+                <p>pursuing  BBA Program from Department of Management in University of Chittagong</a></p>
                 <br>
 
                   
