--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class="about">
         <h1>Sabbir Ahmmed</h1>
-        <p class="re">Pursuing BBA Program from the Department of Management, University of Chittagong</p>
+        <p class="re">Pursuing BBA program from the Department of Management, University of Chittagong</p>
         <h2 class="pe">From Fatikchhari, Chattogram, Bangladesh</h2>
       </div>
 
